Archive2/dc/3fc6cc6faa3f98/output
main.cpp:12:9: error: no matching function for call to 'foo'
        foo(foo); //Error
        ^~~
main.cpp:3:10: note: candidate function not viable: no overload of 'foo' matching 'void (*)()' for 1st argument
    void foo(void (*bar)()){ bar(); };
         ^
main.cpp:5:10: note: candidate function not viable: no overload of 'foo' matching 'int' for 1st argument
    void foo(int a = 5)
         ^
1 error generated.
